# nondefaced-detector

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  setup_gpu.py
.github/workflows/: docker-cpu.yml  docker-gpu.yml  docker.yml  pre-release.yml
MRI-face-decoder/: samplepaper.aux  samplepaper.blg  samplepaper.tex
defacing/dataloaders/: dataloader.py  dataset.py  dataset_utils.py  inference_dataloader.py  registration.py
defacing/examples/: Untitled.ipynb  cam_analysis.py  example.py  ixi.py  kfold_prepare_data.py  (+4 more)
docker/: Dockerfile  README.md  cpu.Dockerfile  gpu.Dockerfile  test.Dockerfile
docs/: api.rst  conf.py  index.rst  introduction.rst  user_guide.rst
examples/: 01_experiment_deface_refaced.ipynb.REMOVED.git-id  01_experiment_face_refaced_defaced.ipynb  Plotting.ipynb  cam_analysis.py  dataAnalysis.ipynb  example.py  generate_distribution.py  gradcam.ipynb  ixi.py  kfold_prepare_data.py  playground.ipynb  prepare_data.py  reface.py  slice_extraction.py  split-training.e81472  split-training.e85511  split-training.e87016  split-training.e87017  split-training.e88105  split-training.e97719  split-training.o81472  split-training.o85511.REMOVED.git-id  split-training.o87016  split-training.o87017  split-training.o88105  split-training.o97719  test_inference.csv  train-script.sh  train.py  train_parallel.py
js/: Readme.md  generate_tfjs_models.py  index.html  index.js  loader.js  package-lock.json  package.json  ui.js  utils.js
nondefaced_detector/: __init__.py  _version.py  inference.py  prediction.py  preprocess.py  preprocessing.py  utils.py
notebooks/: Cross_validation.ipynb  Data_generation_and_preprocessing.ipynb  metrics.ipynb  playground.ipynb  plot_cv_indices.ipynb  training.ipynb
sample_vols/: example1.nii.gz.REMOVED.git-id
tools/: update_changes.sh
(+173 files in other folders)
