[metadata]
name = nondefaced-detector
url = https://github.com/poldracklab/nondefaced-detector
author = Nondefaced Detector Developers
author_email = shashankbansal56@gmail.com
description = A package to detect if an MRI Volume has been defaced.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, 2.0
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/poldracklab/nondefaced-detector/issues
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    numpy
    nibabel
    nobrainer
    tqdm

[options.entry_points]
console_scripts =
    nondefaced-detector = nondefaced_detector.cli.main:cli

[options.extras_require]
cpu = tensorflow >= 2.0.0
gpu = tensorflow-gpu<=2.3.2
dev =
    black
    ipython
    flake8
    nbconvert
    pre-commit
    pytest-cov
    scipy

[versioneer]
VCS = git
style = pep440
versionfile_source = nondefaced_detector/_version.py
versionfile_build = nondefaced_detector/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 88
exclude =
    .git/
    __pycache__/
    build/
    dist/
    versioneer.py
    _version.py
ignore =
    E203
    W503
